# project_moon

./: .dockerignore  .env.example  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  grpc_player_snapshot_port_client.conf  grpc_player_snapshot_port_player.conf  login_service_test.conf
.github/workflows/: ci.yml
apps/battle/: battle_server_app.cpp  battle_server_app.h  main.cpp
apps/battle_reward_worker/: battle_reward_worker_app.cpp  battle_reward_worker_app.h  main.cpp
apps/dungeon/: dungeon_server_app.cpp  dungeon_server_app.h  main.cpp
apps/gateway/: forward_executor.cpp  forward_executor.h  gateway_server_app.cpp  gateway_server_app.h  main.cpp  rate_limit_service.cpp  rate_limit_service.h  request_router.cpp  request_router.h  session_binding_service.cpp  session_binding_service.h  upstream_response_validator.cpp  upstream_response_validator.h
apps/login/: login_server_app.cpp  login_server_app.h  main.cpp
apps/player/: main.cpp  player_server_app.cpp  player_server_app.h
apps/player_internal_grpc_server/: main.cpp  player_internal_grpc_server_app.cpp  player_internal_grpc_server_app.h
configs/: battle_server.docker.conf  dungeon_server.conf  dungeon_server.docker.conf  game_server.conf  game_server.docker.conf  gateway.conf  gateway_1.conf  gateway_2.conf  gateway_server.conf  login_server.conf  login_server.docker.conf  player_internal_grpc_server.conf  player_internal_grpc_server.docker.conf  player_server.conf  player_server.docker.conf
configs/delivery/: battle_server.conf  dungeon_server.conf  game_server.conf  gateway_1.conf  gateway_2.conf  gateway_client.conf  gateway_server_1.conf  gateway_server_2.conf  login_server.conf  player_internal_grpc_server.conf  player_server.conf
configs/demo/: battle_server.conf  dungeon_server.conf  game_server.conf  gateway_1.conf  gateway_2.conf  gateway_client.conf  gateway_server_1.conf  gateway_server_2.conf  login_server.conf  player_internal_grpc_server.conf  player_server.conf
configs/local/: battle_reward_worker.conf  battle_server.conf  dungeon_server.conf  game_server.conf  gateway.conf  gateway_server.conf  login_server.conf  player_internal_grpc_server.conf  player_server.conf
configs/prod/: battle_server.conf  dungeon_server.conf  gateway_client.conf  gateway_server.conf  login_server.conf  player_internal_grpc_server.conf  player_server.conf
deploy/: .env.delivery.example  .env.demo  Dockerfile  docker-compose.delivery.yml  docker-compose.yml
deploy/nginx/: nginx.conf
deploy/tls/: README.md
docs/: 01-project-overview.md  02-architecture.md  03-system-design.md  04-development-workflow.md  05-engineering-standards.md  README.md  delivery_package.md  interview-walkthrough.md  mvp-main-flow.md  one_pager.md
docs/code-learning/: README.md  code-map.md  flow-walkthrough.md
docs/mobile-game-backend-replica/: architecture.md  proposal.md  spec.md  tasks.md  tech-stack.md
dungeon_server/: dungeon_network_server.cpp  dungeon_network_server.h  main.cpp
dungeon_server/dungeon/: battle_context_repository.h  dungeon_config_repository.h  dungeon_service.cpp  dungeon_service.h  in_memory_dungeon_config_repository.cpp  in_memory_dungeon_config_repository.h  mysql_dungeon_repository.cpp  mysql_dungeon_repository.h  player_lock_repository.h  redis_battle_context_repository.cpp  redis_battle_context_repository.h  redis_player_lock_repository.cpp  redis_player_lock_repository.h
framework/execution/: execution_types.cpp  execution_types.h  sharded_request_executor.cpp  sharded_request_executor.h
framework/protocol/: adapter_utils.h  context_enrichment.cpp  context_enrichment.h  context_extractor.cpp  context_extractor.h  error_responder.cpp  error_responder.h  handler_context.h  message_policy_registry.cpp  message_policy_registry.h  packet_codec.cpp  packet_codec.h  request_dispatcher.cpp  request_dispatcher.h
framework/runtime/: service_options.cpp  service_options.h
framework/service/: route_registry.h  service_app.cpp  service_app.h
framework/transport/: transport_client.cpp  transport_client.h  transport_server.cpp  transport_server.h
game_server/: game_network_server.cpp  game_network_server.h  main.cpp
game_server/player/: in_memory_player_repository.cpp  in_memory_player_repository.h  mysql_player_repository.cpp  mysql_player_repository.h  player_cache_repository.h  player_repository.h  player_service.cpp  player_service.h  redis_player_cache_repository.cpp  redis_player_cache_repository.h
gateway/: gateway_server.cpp  gateway_server.h  main.cpp  session_binding_authorizer.cpp  session_binding_authorizer.h
login_server/: login_network_server.cpp  login_network_server.h  login_service.cpp  login_service.h  main.cpp
login_server/auth/: account_repository.h  in_memory_account_repository.cpp  in_memory_account_repository.h  mysql_account_repository.cpp  mysql_account_repository.h
login_server/session/: in_memory_session_repository.cpp  in_memory_session_repository.h  redis_session_repository.cpp  redis_session_repository.h  session_repository.h
proto/: game_backend.proto
proto/internal/: player_internal.proto
runtime/execution/: execution_types.cpp  (+3 more)
scripts/: _common.sh  bootstrap.sh  check_architecture.py  down.sh  run_demo.sh  run_gateway_fault_checks.sh  run_local.ps1  run_local.sh  run_multi_gateway_demo.sh  run_mvp_flow.sh  run_network_demo.sh  setup_grpc_stack.sh  smoke.sh  test.sh  up.sh  verify.sh
src/: CMakeLists.txt
tests/: battle_service_test.cpp  dungeon_service_test.cpp  grpc_player_snapshot_port_test.cpp  logger_test.cpp  login_service_test.cpp  observability_log_test.cpp  packet_codec_test.cpp  player_internal_service_test.cpp  player_service_test.cpp  request_dispatcher_test.cpp  service_check_modes_test.cpp  service_check_tls_config_test.cpp  session_binding_authorizer_test.cpp  session_binding_store_test.cpp  sharded_request_executor_test.cpp  tls_test_materials.h  transport_tls_test.cpp  trusted_gateway_signature_test.cpp  upstream_response_validator_test.cpp
tools/: demo_support.cpp  demo_support.h
(+189 files in other folders)
